@@ -1,3 +1,12 @@
+2014-06-20  Andreas Kling  <akling@apple.com>
+
+        [Cocoa] Release freed up blocks from the JS heap after simulated memory pressure.
+        <https://webkit.org/b/134112>
+
+        Reviewed by Mark Hahnenberg.
+
+        * heap/BlockAllocator.h:
+
 2014-06-19  Alex Christensen  <achristensen@webkit.org>
 
         Unreviewed fix after r170130.
